# openevolve

./: .gitignore  2.yml  Dockerfile  LICENSE.txt  README.md  a.err  extra-openai-models.yaml  log_visualization.py  our.env  pyproject.toml  reset_repo.sh  samples.pkl  test.txt
examples/: cap_set_spec.py  ks_dataset_test.csv  ks_dataset_test.pkl  ks_dataset_train.csv  ks_dataset_train.pkl  ks_law_dataset_ned_redshift.csv  print_db.py  reformat_data.py  sfr_pred_min_spec.py  sfr_pred_spec.py  test_eq.py
examples/astropy_example/: dummy_test.py  eval.py  eval_spec.py  test_cases.pickle
examples/circle_packing/: dummy_test.py  eval.py  prompt.txt  test_cases.pickle
funsearch/: .env  __init__.py  __main__.py  code_manipulation_2.py  constants.py  core.py  custom_types.py  evaluator.py  evaluator2.py  extractor.py  hotswap.py  programs_database_2.py  project_indexer.py  prompt_skeleton.txt  sampler.py  sandbox.py  structured_outputs.py  types.py
funsearch/container/: main.py  (+1 more)
implementation/: evaluator.py
openevolve/: __init__.py  __main__.py  code_manipulation.py  code_manipulation_2.py  constants.py  core.py  custom_types.py  eval_result.py  evaluator.py  evaluator2.py  extractor.py  graph.py  hotswap.py  preview_outputs.py  programs_database.py  programs_database_2.py  project_indexer.py  sampler.py  sandbox.py  structured_outputs.py  systemprompt.txt  test_case.py
tests/: code_manipulation_test.py  evaluator_test.py  funsearch_test.py  gemini_response_test.py  gemini_test.py  main_test.py  programs_database_test.py  sandbox_test.py  test_llm.py  test_sandbox.py
(+7 files in other folders)
