[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["openevolve", "openevolve.container"]

[project]
name = "openevolve"
dynamic = [
  "version",
]
description = "OpenEvolve: Codebase-scale evolutionary algorithms for code optimization, powered by LLMs"
readme = "README.md"
requires-python = ">=3.9"

classifiers = [
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "absl-py==2.0.0",
  "click==8.1",
  "cloudpickle==3.0.0",
  "python-dotenv==1.0.0",
  "scipy==1.11.4",
  "numpy==1.26.2",
  "openai==1.84.0",
]

[project.scripts]
openevolve = "openevolve.__main__:main"

[tool.pytest.ini_options]
addopts = "-ra --tb=short"
testpaths = ["tests", "examples"]
python_files = ["test_*.py", "*_test.py"]